# shitou

./: .gitignore  Cargo.toml  README.md
.zed/: settings.json
match-face/: pyproject.toml
match-face/src/match_face/: match.py
src/: device.rs  main.rs  ocr.rs
